--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ body {
 }
 
 .gameboard > div {
-    justify-self: center;
-    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
     font-size: 40px;
 }
