--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .gameboard {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     height: 600px;
